tools/data-handler/test/test-data/valid/decision-records/.cards/local/reports/divideByZeroReport/.schema
[
  {
    "version": 1,
    "id": "reportSchema",
    "file": "../divideByZeroReport.json"
  }
]
