tools/data-handler/test/test-data/invalid/no-.schema-in-.cards-templates-subfolder/.cards/local/cardtypes/.schema
{
    "id": "/cardtype-schema",
    "version": 1
}